# callbook-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  python-wheels.yml  release.yml
crates/callbook/: Cargo.toml  build.rs  cbindgen.toml
crates/callbook/benches/: lookup.rs
crates/callbook/include/: callbook.h
crates/callbook/src/: callsign.rs  country.rs  db.rs  error.rs  ffi.rs  format.rs  hci.rs  idx_text.rs  interest.rs  lib.rs  modern.rs  sidecar.rs  tallyham_tests.rs  us_csv.rs  v2_dat.rs  v2_record.rs
crates/callbook/tests/: c_abi.c  real_db.rs  synthetic.rs
python/: README.md  pyproject.toml  setup.py
python/src/callbook_rs/: __init__.py  _api.py  _native.py
python/tests/: test_api.py
scripts/: smoke_c_abi.sh  smoke_python_package.sh
