[workspace]
resolver = "2"
members = [
    "crates/callbook",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["David Christle <dchristle@users.noreply.github.com>"]
repository = "https://github.com/dchristle/callbook-rs"
homepage = "https://github.com/dchristle/callbook-rs"
description = "Native reader for the Buckmaster HamCall callsign database"
keywords = ["amateur-radio", "ham-radio", "callsign", "hamcall", "buckmaster"]
categories = ["database", "command-line-utilities", "parser-implementations"]

[workspace.dependencies]
callbook = { package = "callbook-rs", version = "0.1.0", path = "crates/callbook" }
memmap2 = "0.9"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
csv = "1.4"
rustc-hash = "2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"
