[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callbook-rs"
version = "0.1.0"
description = "Python bindings for the callbook-rs HamCall database reader"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "David Christle", email = "dchristle@users.noreply.github.com" }]
keywords = ["amateur-radio", "ham-radio", "callsign", "callbook", "buckmaster"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database",
  "Topic :: Communications :: Ham Radio",
]

[project.urls]
Homepage = "https://github.com/dchristle/callbook-rs"
Repository = "https://github.com/dchristle/callbook-rs"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
callbook_rs = ["py.typed", "lib/*"]
