[package]
name = "callbook-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "callbook"
crate-type = ["rlib", "cdylib"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
csv.workspace = true
memmap2.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
zip.workspace = true
serde_json.workspace = true

[build-dependencies]
cbindgen = { version = "0.27", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "lookup"
harness = false

[[bin]]
name = "callbook"
path = "src/bin/callbook.rs"
required-features = ["cli"]
